--- a/DesktopAppGimnasio/Properties/Resources.resx
+++ b/DesktopAppGimnasio/Properties/Resources.resx
@@ -117,4 +117,8 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Manual_de_usuario_Desktop_App_Gimnasio" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\_Resources\UserManual\Manual de usuario Desktop App Gimnasio.pdf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
